Fixed body width bug on mobile devices
Bug introduced that was not enforcing body width with sidebar open on mobile widths.

--- a/easy-sidebar.css
+++ b/easy-sidebar.css
@@ -11,6 +11,7 @@ body {
 	min-height: 100%;
 	margin: 0;
 	padding: 0;
+	width: 100%;
 }
 body.toggled {
 	-webkit-transform: translateX(250px);
